--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ header .navbar a:hover{
   top:3rem; left:3rem;
   background:var(--red);
   color:#fff;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding:.5rem 1rem;
   border-radius: .5rem;
 }
@@ -507,9 +507,40 @@ header .navbar a:hover{
 
 
 
-
-
-
+div.stars {
+  width: 270px;
+  display: inline-block;
+}
+ 
+input.star { display: none; }
+ 
+label.star {
+  float: right;
+  padding: 10px;
+  font-size: 36px;
+  color: #444;
+  transition: all .2s;
+}
+ 
+input.star:checked ~ label.star:before {
+  content: '\f005';
+  color:  rgb(215, 210, 75);
+  transition: all .25s;
+}
+ 
+input.star-5:checked ~ label.star:before {
+  color: rgb(215, 210, 75);
+  text-shadow: 0 0 20px #952;
+}
+ 
+input.star-1:checked ~ label.star:before { color: #F62; }
+ 
+label.star:hover { transform: rotate(-15deg) scale(1.3); }
+ 
+label.star:before {
+  content: '\f006';
+  font-family: FontAwesome;
+}
 
 
 
