--- a/css/style.css
+++ b/css/style.css
@@ -1174,3 +1174,11 @@ html {
 .active {
   opacity: 1 !important;
 }
+
+.embed-responsive {
+  position: relative;
+  display: block;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+}
