--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ header .navbar a {
   font-size: 2rem;
   font-weight: bold;
   margin-left: 2rem;
-  color: #000;
+  color: #fff;
 }
 
 header .navbar a:hover {
