--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ html {
 }
 
 body {
-  background-image: url("/DemoARQuickLook.github.io-main/images/BG.png");
+  background-image: url("images/BG.png");
   background-repeat: 12;
 }
 
